# sync-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
sync_template/: config.py  git.py  main.py
tests/: test_sync.py
