[project]
name = "sync-template"
version = "0.1.1"
description = "A CLI tool to synchronize projects with their templates."
authors = [
    {name = "Quaerent", email = "topfyf@qq.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["git", "template", "sync", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.24.1,<0.25.0)",
    "gitpython (>=3.1.46,<4.0.0)",
    "pathspec (>=1.0.4,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/XXCC-Unicorn-Press/sync-template"
Repository = "https://github.com/XXCC-Unicorn-Press/sync-template"
Issues = "https://github.com/XXCC-Unicorn-Press/sync-template/issues"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[project.scripts]
sync-template = "sync_template.main:app"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
